--- a/src/app/modules/admin/components/label-entities/professions-paginated-table/professions-paginated-table.component.html
+++ b/src/app/modules/admin/components/label-entities/professions-paginated-table/professions-paginated-table.component.html
@@ -1,8 +1,8 @@
 <app-page-header>Специальности</app-page-header>
 
-<div class="container mt-3" *ngIf="items; else dataLoading">
+<div class="container mb-5" *ngIf="items; else dataLoading">
   <div class="card">
-    <div class="card-body">
+    <div class="card-body p-5">
       <div class="mb-2">
         <button class="btn btn-sm btn-primary" (click)="create()">
           Создать
