--- a/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
+++ b/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
@@ -4,18 +4,23 @@
   </div>
 
   <div *ngIf="!showThankYouBlock">
-    <div class="mb-3 h3 alert-heading">Была ли статистика полезной?</div>
 
     <div class="mb-3">
-      Надеемся, что предоставленные данные были полезны для вас. Пожалуйста,
-      оцените нашу работу.
+      <p>
+        Нам важно мнение пользователей о предоставленной статистике. Интересно
+        взглянуть на то, как респонденты оценивают свою зарплату и какие
+        ожидания у них относительно рынка труда в Казахстане.
+      </p>
+      <p>
+        Пожалуйста, примите участие в опросе.
+      </p>
     </div>
 
     <div>
       <form [formGroup]="formGroup">
         <div class="mb-3">
-          <div class="mb-1">
-            <b>Была ли статистика полезной для вас?</b>
+          <div class="mb-3 h3">
+            1. Была ли статистика полезной для вас?
           </div>
           <div
             *ngFor="
@@ -42,8 +47,8 @@
         </div>
 
         <div class="mb-3">
-          <div class="mb-1">
-            <b>Зарплаты оказались такими, как вы предполагали?</b>
+          <div class="mb-3 h3">
+            2. Зарплаты оказались такими, как вы предполагали?
           </div>
           <div
             *ngFor="
