--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -26,13 +26,13 @@
   </div>
 </div>
 
-<div class="mb-5 h1">Распределение ответов по грейдам</div>
+<div class="mb-5 display-4">Распределение ответов по грейдам</div>
 
 <div class="mb-2">
-  <div class="mb-1">
+  <p>
     Ниже вы можете включить группы графиков для соответствующего грейда
-  </div>
-  <div class="">
+  </p>
+  <div class="mb-5">
     <button
       *ngFor="let button of gradesButtons"
       type="button"
