--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -29,9 +29,7 @@
 <div class="mb-5 display-4">Распределение ответов по грейдам</div>
 
 <div class="mb-2">
-  <p>
-    Ниже вы можете включить группы графиков для соответствующего грейда
-  </p>
+  <p>Ниже вы можете включить группы графиков для соответствующего грейда</p>
   <div class="mb-5">
     <button
       *ngFor="let button of gradesButtons"
