--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -266,8 +266,8 @@
     *ngIf="!showDataStub && salariesChart.salariesByMoneyBarChart"
   >
     <div class="card-body py-5 px-5">
-      <div class="mb-5 display-4" id="salaryProfessionAndIndustry">
-        <span>Зарплата, специализация и индустрия</span>
+      <div class="mb-5">
+        <span class="display-4">Зарплата, специализация и индустрия</span>
       </div>
 
       <div class="mt-5 mb-5">
