--- a/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
+++ b/src/app/modules/salaries/components/salaries-survey-block/salaries-survey-block.component.html
@@ -4,24 +4,19 @@
   </div>
 
   <div *ngIf="!showThankYouBlock">
-
     <div class="mb-3">
       <p>
         Нам важно мнение пользователей о предоставленной статистике. Интересно
         взглянуть на то, как респонденты оценивают свою зарплату и какие
         ожидания у них относительно рынка труда в Казахстане.
       </p>
-      <p>
-        Пожалуйста, примите участие в опросе.
-      </p>
+      <p>Пожалуйста, примите участие в опросе.</p>
     </div>
 
     <div>
       <form [formGroup]="formGroup">
         <div class="mb-3">
-          <div class="mb-3 h3">
-            1. Была ли статистика полезной для вас?
-          </div>
+          <div class="mb-3 h3">1. Была ли статистика полезной для вас?</div>
           <div
             *ngFor="
               let choice of formGroup.usefullnessReplyOptions;
