--- a/src/app/shared/components/wednesday-frog/wednesday-frog.component.html
+++ b/src/app/shared/components/wednesday-frog/wednesday-frog.component.html
@@ -20,8 +20,8 @@
     <div class="modal-content">
       <div class="modal-body d-flex justify-content-center">
         <img
-          class="img-fluid rounded img-thumbnail"
-          src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/wednesday-frogs/wednesday_frog_gentelmen.jpeg"
+          class="d-block img-fluid rounded img-thumbnail"
+          src="{{ frogToBeShown }}"
           alt="Frog who notifies about wednesday"
           title="It's Wednesday, my dudes"
         />
