--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -240,6 +240,34 @@
         </div>
       </div>
 
+      <div
+        class="mt-3 alert alert-info"
+        *ngIf="kolesaImportedDataAnalyticsSalariesWasSelected"
+      >
+        <div class="h5">Внимание!</div>
+        <div class="mt-2">
+          Вы просматриваете импортированную статистику
+          <a
+            href="https://kolesa.group/media/posts/issledovaniya/skolko-zarabatyvayut-data-specialisty-v-kazahstane?utm_source=techinterview.space"
+            target="_blank"
+            class="text-reset"
+            >исследования зарплат Data-специалистов в IT</a
+          >
+          от 2024 года, проведенного компанией
+          <a
+            href="https://kolesa.group?utm_source=techinterview.space"
+            target="_blank"
+            class="text-reset"
+            >Kolesa Group</a
+          >. Статистика была собрана в летом 2024 года. Список валют
+          показывает те рейты, которые были актуальны на декабрь 2024 года по
+          данным нацбанка РК.
+        </div>
+        <div class="mt-2">
+          Спасибо команде Kolesa Group за предоставленные данные.
+        </div>
+      </div>
+
       <div class="mt-5" *ngIf="noImportSourceWasSelected">
         <div class="h4">Дополнительная статистика</div>
         <div class="mt-3">
