--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -278,7 +278,7 @@
         <ul class="mt-2 font-weight-normal">
           <li>
             <a class="btn-link-sm" routerLink="/salaries/historical-data">
-              Тенденция измненения зарплат</a
+              Тенденция изменения зарплат</a
             >
           </li>
           <li>
