--- a/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
@@ -99,7 +99,7 @@
     </thead>
     <tbody>
       <tr class="small" *ngFor="let item of salaries; let i = index">
-        <td>{{ item.value | number : "1.0-0" }}</td>
+        <td>{{ item.value | formatAsMoney }}</td>
         <td>{{ item.quarter }}.{{ item.year }}</td>
         <td>{{ item.age }}</td>
         <td>{{ item.gender }}</td>
