--- a/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
+++ b/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
@@ -21,7 +21,7 @@
           <tbody>
             <tr class="small" *ngFor="let item of items; let i = index">
               <td>{{ item.username }}</td>
-              <td>{{ item.usageCount | number : "1.0-0" }}</td>
+              <td>{{ item.usageCount | formatAsMoney }}</td>
               <td>{{ item.channelName ?? "-" }}</td>
               <td>{{ item.channelId ?? "-" }}</td>
               <td>{{ item.usageTypeAsString }}</td>
