--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -1,28 +1,30 @@
 <div class="mb-5">
   <div class="h4 mb-2">Польза статистики, все ответы вместе</div>
-  <div class="mb-2">
+  <div class="chart-container">
+    <canvas class="chart" id="usefulness-chart">{{ usefulnessChart }}</canvas>
+  </div>
+  <div class="mt-2">
     График показывает соотношение ответов на вопрос "Полезна ли статистика по
     зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
     построены в столбик, высотка столбика - 100%. Первый столбик - ответы
     респондентов, работающих в Казахстанских компаниях, второй - ответы
     респондентов, работающих на удаленке.
   </div>
-  <div class="chart-container">
-    <canvas class="chart" id="usefulness-chart">{{ usefulnessChart }}</canvas>
-  </div>
 </div>
 
 <div class="mb-5">
   <div class="h4 mb-3">Ожидания от статистики, все ответы вместе</div>
-  <div class="mb-2">
+
+  <div class="chart-container">
+    <canvas class="chart" id="expectation-chart">{{ expectationChart }}</canvas>
+  </div>
+
+  <div class="mt-2">
     График показывает соотношение ответов на вопрос "Насколько ожидаемой
     оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
     "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
     100%. Первый столбик - ответы респондентов, работающих в Казахстанских
     компаниях, второй - ответы респондентов, работающих на удаленке.
-  </div>
-  <div class="chart-container">
-    <canvas class="chart" id="expectation-chart">{{ expectationChart }}</canvas>
   </div>
 </div>
 
@@ -46,16 +48,18 @@
   <div class="h4 mb-2">
     Польза статистики по мнению тех, кто работает на Казахстан
   </div>
-  <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Полезна ли статистика по
-    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
-    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
-    респондентов одного грейда: Junior, Middle, Senior, Lead.
-  </div>
+
   <div class="chart-container">
     <canvas class="chart" id="usefulness-grade-local-chart">{{
       usefulnessGradeLocalChart
     }}</canvas>
+  </div>
+
+  <div class="mt-2">
+    График показывает соотношение ответов на вопрос "Полезна ли статистика по
+    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
+    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
+    респондентов одного грейда: Junior, Middle, Senior, Lead.
   </div>
 </div>
 
@@ -63,16 +67,17 @@
   <div class="h4 mb-2">
     Польза статистики по мнению тех, кто работает на удаленке
   </div>
-  <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Полезна ли статистика по
-    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
-    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
-    респондентов одного грейда: Junior, Middle, Senior, Lead.
-  </div>
+  
   <div class="chart-container">
     <canvas class="chart" id="usefulness-grade-remote-chart">{{
       usefulnessGradeRemoteChart
     }}</canvas>
+  </div>
+  <div class="mt-2">
+    График показывает соотношение ответов на вопрос "Полезна ли статистика по
+    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
+    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
+    респондентов одного грейда: Junior, Middle, Senior, Lead.
   </div>
 </div>
 
@@ -80,17 +85,18 @@
   <div class="h4 mb-2">
     Ожидания по статистике у тех, кто работает на Казахстан
   </div>
-  <div class="mb-2">
+
+  <div class="chart-container">
+    <canvas class="chart" id="expectation-grade-local-chart">{{
+      expectationGradeLocalChart
+    }}</canvas>
+  </div>
+  <div class="mt-2">
     График показывает соотношение ответов на вопрос "Насколько ожидаемой
     оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
     "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
     100%. Каждый столбик - ответы респондентов одного грейда: Junior, Middle,
     Senior, Lead.
-  </div>
-  <div class="chart-container">
-    <canvas class="chart" id="expectation-grade-local-chart">{{
-      expectationGradeLocalChart
-    }}</canvas>
   </div>
 </div>
 
@@ -98,16 +104,17 @@
   <div class="h4 mb-2">
     Ожидания по статистике у тех, кто работает на удаленке
   </div>
-  <div class="mb-2">
+  
+  <div class="chart-container">
+    <canvas class="chart" id="expectation-grade-remote-chart">{{
+      expectationGradeRemoteChart
+    }}</canvas>
+  </div>
+  <div class="mt-2">
     График показывает соотношение ответов на вопрос "Насколько ожидаемой
     оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
     "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
     100%. Каждый столбик - ответы респондентов одного грейда: Junior, Middle,
     Senior, Lead.
-  </div>
-  <div class="chart-container">
-    <canvas class="chart" id="expectation-grade-remote-chart">{{
-      expectationGradeRemoteChart
-    }}</canvas>
   </div>
 </div>
