--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -259,9 +259,9 @@
             target="_blank"
             class="text-reset"
             >Kolesa Group</a
-          >. Статистика была собрана в летом 2024 года. Список валют
-          показывает те рейты, которые были актуальны на декабрь 2024 года по
-          данным нацбанка РК.
+          >. Статистика была собрана в летом 2024 года. Список валют показывает
+          те рейты, которые были актуальны на декабрь 2024 года по данным
+          нацбанка РК.
         </div>
         <div class="mt-2">
           Спасибо команде Kolesa Group за предоставленные данные.
